--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,19 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Install MSP430 GCC
+      - name: Install MSP430 Toolchain
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc-msp430 binutils-msp430 msp430-libc
 
       - name: Build project
-        run: make
+        run: |
+          # Kompilacja do pliku .elf
+          msp430-elf-gcc -mmcu=msp430fr5739 -O2 -g -o main.elf AgNP04b-main.c
+          # Konwersja na format Intel HEX dla PCBWay
+          msp430-elf-objcopy -O ihex main.elf main.hex
 
       - name: Upload Hex File
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: firmware-hex
           path: main.hex
-          
