--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Compile MSP430 Code
+nname: Compile MSP430 Code
 
 on: [push, workflow_dispatch]
 
@@ -11,15 +11,19 @@ jobs:
 
       - name: Install MSP430 Toolchain
         run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-msp430 binutils-msp430 msp430-libc
+          sudo apt-get update --fix-missing
+          sudo apt-get install -y gcc-msp430 binutils-msp430 msp430-libc msp430mcu-lib
 
       - name: Build project
         run: |
-          # Kompilacja do pliku .elf
+          # Kompilacja z flagą -I aby upewnić się, że widzi biblioteki
           msp430-elf-gcc -mmcu=msp430fr5739 -O2 -g -o main.elf AgNP04b-main.c
-          # Konwersja na format Intel HEX dla PCBWay
+          
+          # Konwersja na format Intel HEX
           msp430-elf-objcopy -O ihex main.elf main.hex
+          
+          # Sprawdzenie czy plik powstał
+          ls -lh main.hex
 
       - name: Upload Hex File
         uses: actions/upload-artifact@v4
