--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-nname: Compile MSP430 Code
+name: Compile MSP430 Code
 
 on: [push, workflow_dispatch]
 
@@ -9,23 +9,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install MSP430 Toolchain
+      - name: Install Toolchain
         run: |
-          sudo apt-get update --fix-missing
-          sudo apt-get install -y gcc-msp430 binutils-msp430 msp430-libc msp430mcu-lib
+          sudo apt-get update
+          sudo apt-get install -y gcc-msp430 binutils-msp430 msp430-libc
 
-      - name: Build project
+      - name: Build Project
         run: |
-          # Kompilacja z flagą -I aby upewnić się, że widzi biblioteki
-          msp430-elf-gcc -mmcu=msp430fr5739 -O2 -g -o main.elf AgNP04b-main.c
-          
-          # Konwersja na format Intel HEX
+          msp430-elf-gcc -mmcu=msp430fr5739 -O2 -o main.elf AgNP04b-main.c
           msp430-elf-objcopy -O ihex main.elf main.hex
-          
-          # Sprawdzenie czy plik powstał
-          ls -lh main.hex
 
-      - name: Upload Hex File
+      - name: Upload Result
         uses: actions/upload-artifact@v4
         with:
           name: firmware-hex
